Jarraipenen zerbitzuak gehitu dira

--- a/docroot/WEB-INF/sql/indexes.properties
+++ b/docroot/WEB-INF/sql/indexes.properties
@@ -2,4 +2,6 @@ IX_B6CE8631=Txotx_GoogleDevice.EmailAddress
 IX_48F8086D=Txotx_GoogleDevice.RegistrationId
 IX_9DB7A97F=Txotx_GoogleDevice.UserId
 
+IX_366FBAF0=Txotx_Jarraipen.JarraitzaileUserId
+
 IX_7ADD0F7F=Txotx_Sailkapena.UserId
