--- a/docroot/WEB-INF/sql/indexes.properties
+++ b/docroot/WEB-INF/sql/indexes.properties
@@ -2,6 +2,7 @@ IX_B6CE8631=Txotx_GoogleDevice.EmailAddress
 IX_48F8086D=Txotx_GoogleDevice.RegistrationId
 IX_9DB7A97F=Txotx_GoogleDevice.UserId
 
+IX_14D4BA1C=Txotx_Jarraipen.JarraituaId
 IX_2B0A5D07=Txotx_Jarraipen.JarraituaUserId
 IX_366FBAF0=Txotx_Jarraipen.JarraitzaileUserId
 IX_E020E5CB=Txotx_Jarraipen.SagardoEgunId
